# cuda_practices

./: .gitignore  CMakeLists.txt  README.md  README.txt  readme.txt  tags
00_cuda_basic/: Makefile  demo  demo.cu  hello.cu  hello_world  hello_world.cu  main.cpp  op.cuh  plot.py  reduceInteger  reduceInteger.cu  simpleShfl
example/: luanch.cpp
example/ops-demo/: demo.cu  online_softmax.cu  op_online_softmax.cu  reduceInteger.cu  simpleShfl.cu
include/: op.cuh
notes/: cuda_notes.md
